--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -26,5 +26,10 @@
     "express-rate-limit": "^6.9.0",
     "http-proxy-middleware": "^2.0.6",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
